--- a/src/assets/scss/theme/navbar.scss
+++ b/src/assets/scss/theme/navbar.scss
@@ -1,11 +1,10 @@
 .navbar {
   position: fixed;
-  // margin: 0 auto;
   top: 0;left: 50%;
   transform: translate(-50%, 0);
-  // -webkit-transform: translate(-50%, 0);
   width: 100%;
   z-index: 5;
+  * { white-space: nowrap; }
   @media (max-width:768px) {
     display: none;
   }
